comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex itaque tempore voluptates libero est harum pariatur ratione at quos eveniet laborum exercitationem, voluptatum quidem maiores temporibus error nulla quisquam expedita.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Textp Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nostrum veritatis atque esse ipsum temporibus assumenda mollitia animi labore in dignissimos, distinctio aut eligendi unde at est hic sunt nemo?</p>
         </article>
 
     </main>
